# grasping_point

./: CMakeLists.txt  README.md
STEFAN/grasping_point/: assembly_line_1st_chairup.yaml  assembly_line_2nd.yaml  assembly_line_renew.yaml  long_part.stl.yaml
scripts/: MoveGroupPlanner.py  after_assembly.py  before_assembly.py  bottom_zup.py  dual_arm.py  line_grp_assembly.py  renew_line_grp.py  whole_part copy.py  whole_part.py
